syntax = "proto3";

option go_package = "./pb";

// User profile information
message Profile {
  int32 age = 1;
  string location = 2;
}

// User message
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  Profile profile = 4;
  repeated string preferences = 5;
  string created_at = 6;
}

// Get user request
message GetUserRequest {
  string user_id = 1;
  bool include_profile = 2;
}

// Get user response
message GetUserResponse {
  User user = 1;
}

// Create user request
message CreateUserRequest {
  User user = 1;
  repeated string preferences = 2;
}

// Create user response
message CreateUserResponse {
  User user = 1;
}

// Update user request
message UpdateUserRequest {
  string user_id = 1;
  User updates = 2;
}

// Update user response
message UpdateUserResponse {
  User user = 1;
}

// List users request
message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
  map<string, string> filter = 3;
}

// List users response
message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// Delete user request
message DeleteUserRequest {
  string user_id = 1;
}

// Delete user response
message DeleteUserResponse {
  bool success = 1;
}

// UserService definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
