syntax = "proto3";
package performance_test;
option go_package = "./testdata/performance";

import "google/protobuf/struct.proto";

// Message using map<string, string> (current approach)
message FlatDataRequest {
    map<string, string> data = 1;
}

message FlatDataResponse {
    map<string, string> result = 1;
}

// Message using google.protobuf.Struct (alternative approach)
message StructDataRequest {
    google.protobuf.Struct data = 1;
}

message StructDataResponse {
    google.protobuf.Struct result = 1;
}

// Service definitions for both approaches
service FlatDataService {
    rpc ProcessFlat(FlatDataRequest) returns (FlatDataResponse);
}

service StructDataService {
    rpc ProcessStruct(StructDataRequest) returns (StructDataResponse);
}